# C2C

./: .gitignore  =2.10.0  CLAUDE.md  CrossRing_Architecture_Documentation.md  MANIFEST.in  README.md  __init__.py  debug_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_can_inject.py  test_crosspoint_integration.py  test_crosspoint_with_simplified_ring.py  test_crossring_refactor.py  test_crossring_visualizer.py  test_packet_completion.py  test_ring_slice_refactor.py  test_simplified_ring_transmission.py  test_start_time.py  test_visualization_simple.py  write_debug_analysis.md
config/: constants.py  loader.py
docs/: CrossRing_Architecture_Documentation.md  FILE_BASED_TRAFFIC_SYSTEM.md  NOC_ANALYSIS_GUIDE.md  SG2260E C2C通信系统协议层与拓扑层逻辑流程说明.md  crossring_link_update_summary.md
examples/: README.md  __init__.py  basic_c2c_demo.py  basic_demo.py  basic_traffic_example.py  cdma_protocol_test.py  cdma_protocol_usage.py  crossring_config_example.py  crossring_noc_demo.py  crossring_noc_traffic_example.py  crossring_topology_demo.py  crossring_topology_example.py  crossring_traffic_simulation.py  debug_traffic_example.py  noc_analysis_demo.py  noc_analysis_with_output_demo.py  noc_crossring_integration.py  noc_traffic_demo.py  noc_usage_examples.py  simple_noc_analysis_demo.py  simple_traffic_example.py  simulation_demo.py  test_output_management.py  topology_comparison.py  topology_comparison_demo.py  traffic_patterns_demo.py  tree_torus_validation.py  unified_noc_simulation.py  visualization_demo.py
examples/c2c/: basic_c2c_demo.py  simulation_demo.py  topology_comparison.py  traffic_patterns_demo.py
examples/noc/: crossring_config_example.py  crossring_debug_demo.py  crossring_noc_demo.py  crossring_slot_demo.py  crossring_tag_demo.py  crossring_topology_example.py  debug_traffic_example.py  noc_analysis_with_output_demo.py  noc_crossring_demo.py  simple_crossring_demo.py  simple_crossring_test.py  simple_traffic_example.py  test_output_management.py  topology_comparison_demo.py  unified_noc_simulation.py
examples/traffic_data/: crossring_traffic.txt  sample_traffic.txt
examples/visualization/: crossring_link_state_demo.py  crossring_visualization_demo.py  standalone_visualization_demo.py
protocol/: address.py  base.py  cdma.py  credit.py  router.py
results/: fifo_statistics_20250717_171050.csv  fifo_statistics_20250718_102048.csv
scripts/: __init__.py  detailed_memory_profile.py  fix_and_validate_topologies.py  noc_main.py  noc_main_profile.prof  profile_noc_main.py  run_webapp.py  test_cdma.py
src/: __init__.py
src/c2c/: __init__.py
src/noc/: __init__.py  factory.py  types.py
src/protocol/: cdma_engine.py  cdma_system.py  credit.py  dma_controller.py  error_handler.py  flow_control.py  memory_types.py  message_sync.py  packet_format.py  performance_monitor.py  router.py  transaction_manager.py
src/simulation/: __init__.py  engine.py  events.py  fake_chip.py  stats.py
src/topology/: base.py  builder.py  graph.py  link.py  node.py  torus.py
src/utils/: font_config.py  generate_data.py  (+1 more)
tests/: __init__.py  test_cdma_simple.py  test_cdma_system.py  test_crossring_config.py  test_topology_protocol.py
topology/: builder.py  graph.py  link.py  node.py  tree.py
traffic_data/: LLama2_AllReduce.txt  R_5x2.txt  W_5x2.txt  all_to_all_traffic.txt  comparison_traffic.txt  crossring_sample.txt  crossring_traffic.txt  multi_ip_test_traffic.txt  sample_traffic.txt  test1.txt
utils/: exceptions.py
visualization/: comparison.py  interactive.py  layouts.py  visualizer.py
(+131 files in other folders)
